<resources>
    <string name="app_name">Android Bits</string>

    <!-- LoaderView Fragment -->
    <string name="loaderview_show_error">Show Error</string>
    <string name="loaderview_show_loading">Show Loading</string>
    <string name="loaderview_hide">Hide</string>
    <string name="loaderview_reset">Reset</string>
    <string name="loaderview_error_message">Operation Failed :(</string>
    <string name="loaderview_loader_message">Loading info...</string>
</resources>
