<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show_error"
            android:layout_width="0dp"
            android:layout_height="@dimen/loaderview_button_height"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/loaderview_show_error"/>

        <Button
            android:id="@+id/show_loading"
            android:layout_width="0dp"
            android:layout_height="@dimen/loaderview_button_height"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/loaderview_show_loading"/>

        <Button
            android:id="@+id/hide"
            android:layout_width="0dp"
            android:layout_height="@dimen/loaderview_button_height"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/loaderview_hide"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="@dimen/loaderview_button_height"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/loaderview_reset"/>

    </LinearLayout>

    <h3x0mega.loaderview.views.LoaderView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:error_message="@string/loaderview_error_message"
        app:loader_message="@string/loaderview_loader_message"
        app:loader_color="@color/sample_color"
        app:loader_message_text_color="@color/sample_color"
        app:error_message_text_color="@color/sample_color"
        app:button_text_color="@color/sample_color"
        app:error_image="@mipmap/ic_launcher"/>

</LinearLayout>